--- a/WWW/Components/Pages/ProjectView.razor
+++ b/WWW/Components/Pages/ProjectView.razor
@@ -2,6 +2,17 @@
 
 <div>
     <div>Project ID: @Id</div>
+    
+    <EditForm Model="@Project" OnSubmit="@OnSubmit">
+        <div>
+            <InputText id="project-title" @bind-Value="@Project.Title"/>
+        </div>
+
+        <div>
+            <button type="submit" @onclick="@OnSubmit">Submit</button>
+        </div>
+    </EditForm>
+
     <button @onclick="Delete">Delete Project</button>
 
     <div>
@@ -9,7 +20,7 @@
         <button @onclick="NewGoal">New Goal</button>
 
         <ol>
-            @foreach (var goal in Goals())
+            @foreach (var goal in Project.Goals)
             {
                 <li>
                     <GoalView Id="@goal.Id" Refresh="Refresh" />
