--- a/WWW/Components/Pages/QuestionView.razor
+++ b/WWW/Components/Pages/QuestionView.razor
@@ -2,5 +2,15 @@
 
 <div>
     <div>Question ID: @Id</div>
+    <EditForm Model="@Question" OnSubmit="@OnSubmit">
+        <div>
+            <InputText id="question-title" @bind-Value="@Question.Title"/>
+        </div>
+        
+        <div>
+            <button type="submit" @onclick="@OnSubmit">Submit</button>
+        </div>
+    </EditForm>
+    
     <button @onclick="Delete">Delete Question</button>
 </div>
