--- a/WWW/Components/Components/GoalView.razor
+++ b/WWW/Components/Components/GoalView.razor
@@ -19,7 +19,7 @@
         </div>
     </EditForm>
     
-    <button @onclick="Delete">Delete Goal</button>
+    <button @onclick="DeleteSelf" disabled="@IsBeingDeleted">Delete Goal</button>
     
     <div>
         <h4>Questions</h4>
@@ -27,9 +27,9 @@
         <button @onclick="NewQuestion">New Question</button>
         <ol>
             @foreach (var question in Goal.Questions)
-            {
+            { 
                 <li>
-                    <QuestionView Id="@question.Id" Refresh="Refresh" />
+                    <QuestionView Id="@question.Id" @key="question.Id" />
                 </li>
             }
         </ol>
