refactor: move *View into their own folder

--- a/WWW/Components/UI/ProjectView/QuestionView.razor
+++ b/WWW/Components/UI/ProjectView/QuestionView.razor
@@ -1,4 +1,5 @@
-﻿@rendermode InteractiveServer
+﻿@namespace WWW.Components.UI
+@rendermode InteractiveServer
 
 <div>
     <div>Question ID: @Id</div>
