refactor: include db context in ProjectViewService

--- a/WWW/Components/UI/ProjectView/ProjectView.razor
+++ b/WWW/Components/UI/ProjectView/ProjectView.razor
@@ -41,7 +41,7 @@
     
     public void OnSubmit()
     {
-        Context.SaveChanges();
+        ViewService.Db.SaveChanges();
         EditContext.MarkAsUnmodified();
         ViewService.RefreshView();
     }
