--- a/WWW/Components/App.razor
+++ b/WWW/Components/App.razor
@@ -7,12 +7,18 @@
     <base href="/"/>
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="WWW.styles.css"/>
-    <HeadOutlet/>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-<Routes/>
+<Routes @rendermode="InteractiveServer" />
+
 <script src="_framework/blazor.web.js"></script>
+<script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
