feat: add padding to projects, goals and questions

--- a/WWW/Components/UI/Editing/GoalView.razor
+++ b/WWW/Components/UI/Editing/GoalView.razor
@@ -2,7 +2,7 @@
 @using Backend.Entities
 @rendermode InteractiveServer
 
-<div>
+<div style="padding-left: 1rem; padding-bottom: 2rem;">
     <div>Goal ID: @Id</div>
 
     <EditForm EditContext="@EditContext" OnSubmit="@OnSubmit">
