--- a/WWW/Components/UI/Editing/ProjectView.razor
+++ b/WWW/Components/UI/Editing/ProjectView.razor
@@ -2,7 +2,7 @@
 @implements IDisposable
 @rendermode InteractiveServer
 
-<div>
+<div style="padding-left: 1rem; padding-bottom: 3rem;">
     <div>Project ID: @Id</div>
     
     <EditForm EditContext="EditContext" OnSubmit="@OnSubmit">
