--- a/WWW/Components/UI/Editing/QuestionView.razor
+++ b/WWW/Components/UI/Editing/QuestionView.razor
@@ -1,7 +1,7 @@
 ﻿@namespace WWW.Components.UI
 @rendermode InteractiveServer
 
-<div>
+<div style="padding-left: 1rem; padding-bottom: 1rem;">
     <div>Question ID: @Id</div>
     <EditForm EditContext="EditContext" OnSubmit="@OnSubmit">
         <div>
